Do not create countless bonjour browsers
